--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "heroku-postbuild": "npm install",
     "react-dev": "webpack -d --watch",
-    "start": "node index.js"
+    "start": "nodemon server/index.js"
   },
   "author": "Beth Johnson",
   "license": "ISC",
