--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   "scripts": {
     "heroku-postbuild": "npm install",
     "react-dev": "webpack -d --watch",
-    "start": "nodemon server/index.js"
-  },
+    "start": "node server/index.js"
+    },
   "author": "Beth Johnson",
   "license": "ISC",
   "devDependencies": {
